# Agentic-Card-Sorting

./: .gitignore  CLAUDE.md  Makefile  analyze.py  card_sort.py  labels.json  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
apps/backend/: pyproject.toml
apps/backend/src/card_sort_api/: main.py  models.py
apps/backend/src/card_sort_api/routers/: analyze.py  sort.py
apps/backend/src/card_sort_api/services/: analysis.py  card_sort.py  labeling.py
apps/frontend/: astro.config.mjs  package-lock.json  package.json
apps/frontend/src/components/: AnalysisPanel.tsx  AnalyzeForm.tsx  ClusterTable.tsx  PlotlyChart.tsx  SortForm.tsx
apps/frontend/src/layouts/: Layout.astro
apps/frontend/src/pages/: analyze.astro  index.astro  sort.astro
